add exit statement

--- a/feature_tables/Create_Dataset.ipynb
+++ b/feature_tables/Create_Dataset.ipynb
@@ -375,6 +375,29 @@
     "dbutils.jobs.taskValues.set(key=\"train_table_name\", value=train_table_name)\n",
     "dbutils.jobs.taskValues.set(key=\"eval_table_name\", value=eval_table_name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "23bf30a1-17a0-4278-86a4-3936a9b28cf5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "dbutils.notebook.exit(json.dumps({\n",
+    "    'train_table_name': train_table_name,\n",
+    "    'eval_table_name': eval_table_name\n",
+    "}))\n"
+   ]
   }
  ],
  "metadata": {
