exclude fk and timestamp.

--- a/feature_tables/Create_Dataset.ipynb
+++ b/feature_tables/Create_Dataset.ipynb
@@ -330,7 +330,8 @@
     "training_set = fe.create_training_set(\n",
     "  df=df,\n",
     "  feature_lookups=feature_lookups,\n",
-    "  label=label\n",
+    "  label=label,\n",
+    "  exclude_colunmns = df.columns\n",
     ")\n",
     "\n",
     "training_df = training_set.load_df()"
