--- a/feature_tables/Create_Dataset.ipynb
+++ b/feature_tables/Create_Dataset.ipynb
@@ -306,7 +306,8 @@
    },
    "outputs": [],
    "source": [
-    "df = spark.sql(f\"SELECT * FROM {eol_view}\")\n"
+    "df = spark.sql(f\"SELECT * FROM {eol_view}\")\n",
+    "print(df.columns)\n"
    ]
   },
   {
