--- a/feature_tables/Create_Dataset.ipynb
+++ b/feature_tables/Create_Dataset.ipynb
@@ -40,11 +40,10 @@
    },
    "outputs": [],
    "source": [
-    "dbutils.widgets.text(\"app_catalog_name\", \"\", \"app_catalog_name\")\n",
-    "dbutils.widgets.text(\"app_schema_name\", \"\", \"app_schema_name\")\n",
     "dbutils.widgets.text(\"project_catalog_name\", \"\", \"project_catalog_name\")\n",
     "dbutils.widgets.text(\"project_schema_name\", \"\", \"project_schema_name\")\n",
-    "dbutils.widgets.text(\"feature_lookup_id\", \"\", \"feature_lookup_id\")\n",
+    "dbutils.widgets.text(\"features\", \"\", \"features\")\n",
+    "dbutils.widgets.text(\"name\", \"\", \"name\")\n",
     "dbutils.widgets.text(\"eol_view\", \"\", \"eol_view\")\n",
     "dbutils.widgets.text(\"label\", \"\", \"label\")\n",
     "\n"
@@ -68,11 +67,10 @@
    },
    "outputs": [],
    "source": [
-    "app_catalog_name = dbutils.widgets.get(\"app_catalog_name\")\n",
-    "app_schema_name = dbutils.widgets.get(\"app_schema_name\")\n",
     "project_catalog_name = dbutils.widgets.get(\"project_catalog_name\")\n",
     "project_schema_name = dbutils.widgets.get(\"project_schema_name\")\n",
-    "feature_lookup_id = int(dbutils.widgets.get(\"feature_lookup_id\"))\n",
+    "features = dbutils.widgets.get(\"features\")\n",
+    "name = dbutils.widgets.get(\"name\")\n",
     "eol_view = dbutils.widgets.get(\"eol_view\")\n",
     "label = dbutils.widgets.get(\"label\")\n"
    ]
@@ -109,12 +107,9 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "194a2612-a519-49ec-afeb-e9dcdc86e053",
+     "nuid": "a05200ca-6a9d-40f0-afcf-ab431fa57ba4",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -122,120 +117,68 @@
    },
    "outputs": [],
    "source": [
-    "def get_feature_lookup_by_id(feature_lookup_id: int):\n",
-    "    \n",
-    "    try:\n",
-    "        query = f\"SELECT * FROM {app_catalog_name}.{app_schema_name}.feature_lookups WHERE id = {feature_lookup_id}\"\n",
-    "        result = spark.sql(query)\n",
-    "        if result.count() == 0:\n",
-    "            print(f\"No feature lookup found with ID {feature_lookup_id}\")\n",
-    "            return None\n",
-    "        return result.first()\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error: {e}\")\n",
-    "        return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "fd5333ef-ba03-4755-9c7c-5068beac140d",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
+    "import json\n",
     "\n",
-    "def generate_feature_lookups(feature_lookup_id: int):\n",
+    "try:\n",
     "    \n",
-    "    # Get the feature lookup from database\n",
-    "    feature_lookup = get_feature_lookup_by_id(feature_lookup_id)\n",
-    "    \n",
-    "    if feature_lookup is None:\n",
-    "        raise ValueError(f\"No feature lookup found with ID {feature_lookup_id}\")\n",
-    "    \n",
-    "    \n",
-    "    # Parse the features array\n",
-    "    features = feature_lookup['features']\n",
-    "    name = feature_lookup[\"name\"]\n",
-    "    \n",
-    "    if not features:\n",
-    "        print(\"Warning: No features found in this feature lookup\")\n",
-    "        return \"feature_lookups = []\"\n",
+    "    features = json.loads(features)\n",
+    "\n",
+    "except json.JSONDecodeError as e:\n",
+    "    print(f\"Error parsing features JSON: {e}\")\n",
+    "    dbutils.notebook.exit(\"Failed to parse features JSON\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error processing features: {e}\")\n",
+    "    dbutils.notebook.exit(\"Failed to process features\")\n",
+    "\n",
+    "\n",
+    "# Generate FeatureLookup objects\n",
+    "feature_lookup_objects = []\n",
+    "\n",
+    "for feat in features:\n",
+    "    if isinstance(feat, str):\n",
+    "        try:\n",
+    "            # Try to parse as JSON first\n",
+    "            feat_dict = json.loads(feat)\n",
+    "        \n",
+    "        except json.JSONDecodeError:\n",
+    "            # Handle the case where feat is not a valid JSON string\n",
+    "            break;\n",
+    "    elif isinstance(feat, dict):\n",
+    "        feat_dict = feat\n",
+    "    else:\n",
+    "        print(f\"Warning: Unexpected feature format: {feat}\")\n",
+    "        break\n",
     "    \n",
     "\n",
-    "    # Generate FeatureLookup objects\n",
-    "    feature_lookup_objects = []\n",
+    "    # Extract components\n",
     "    \n",
-    "    for feat in features:\n",
-    "        if isinstance(feat, str):\n",
-    "            try:\n",
-    "                # Try to parse as JSON first\n",
-    "                feat_dict = json.loads(feat)\n",
-    "            \n",
-    "            except json.JSONDecodeError:\n",
-    "                # Handle the case where feat is not a valid JSON string\n",
-    "                break;\n",
-    "        elif isinstance(feat, dict):\n",
-    "            feat_dict = feat\n",
-    "        else:\n",
-    "            print(f\"Warning: Unexpected feature format: {feat}\")\n",
-    "            break\n",
+    "    table_name = feat_dict.get('table', '')\n",
+    "    feature_names = feat_dict.get('features', [])\n",
+    "    lookup_key = feat_dict.get('lookup_key')\n",
+    "    timestamp_key = feat_dict.get('timestamp_key', None)\n",
+    "    \n",
+    "    if not table_name:\n",
+    "        continue\n",
     "        \n",
-    "\n",
-    "        # Extract components\n",
-    "      \n",
-    "        table_name = feat_dict.get('table', '')\n",
-    "        feature_names = feat_dict.get('features', [])\n",
-    "        lookup_key = feat_dict.get('lookup_key')\n",
-    "        timestamp_key = feat_dict.get('timestamp_key')\n",
-    "        \n",
-    "        if not table_name:\n",
-    "            print(f\"Warning: Skipping feature with no table name: {feat_dict}\")\n",
-    "            continue\n",
-    "            \n",
-    "        if not lookup_key:\n",
-    "            print(f\"Warning: No lookup key specified for table {table_name}\")\n",
-    "            lookup_key = 'id'  # Default fallback\n",
-    "        \n",
-    "        table_name = feat_dict.get('table', '')\n",
-    "        feature_names = feat_dict.get('features', [])\n",
-    "        lookup_key = feat_dict.get('lookup_key')\n",
-    "        timestamp_key = feat_dict.get('timestamp_key', None)\n",
-    "        \n",
-    "        if not table_name:\n",
-    "            continue\n",
-    "            \n",
-    "        if not lookup_key:\n",
-    "           continue\n",
-    "        \n",
-    "        # Create FeatureLookup object\n",
-    "        if timestamp_key:\n",
-    "            feature_lookup_obj = FeatureLookup(\n",
-    "                table_name=table_name,\n",
-    "                feature_names=feature_names,\n",
-    "                lookup_key=lookup_key,\n",
-    "                timestamp_lookup_key=timestamp_key\n",
-    "            )\n",
-    "        else:\n",
-    "            feature_lookup_obj = FeatureLookup(\n",
-    "                table_name=table_name,\n",
-    "                feature_names=feature_names,\n",
-    "                lookup_key=lookup_key\n",
-    "            )\n",
-    "        \n",
-    "        feature_lookup_objects.append(feature_lookup_obj)\n",
-    "        return feature_lookup_objects, name \n",
-    "   "
+    "    if not lookup_key:\n",
+    "        continue\n",
+    "    \n",
+    "    # Create FeatureLookup object\n",
+    "    if timestamp_key:\n",
+    "        feature_lookup_obj = FeatureLookup(\n",
+    "            table_name=table_name,\n",
+    "            feature_names=feature_names,\n",
+    "            lookup_key=lookup_key,\n",
+    "            timestamp_lookup_key=timestamp_key\n",
+    "        )\n",
+    "    else:\n",
+    "        feature_lookup_obj = FeatureLookup(\n",
+    "            table_name=table_name,\n",
+    "            feature_names=feature_names,\n",
+    "            lookup_key=lookup_key\n",
+    "        )\n",
+    "    \n",
+    "    feature_lookup_objects.append(feature_lookup_obj)"
    ]
   },
   {
@@ -268,46 +211,6 @@
     "    val_df.write.saveAsTable(f\"{catalog}.{schema}.{eval_table_name}\")\n",
     "    return train_table_name, eval_table_name\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "570aaba1-963b-44aa-9f2e-1afe2abee82a",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "feature_lookups, name = generate_feature_lookups(feature_lookup_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "2a8c36fd-ed5d-4a4f-9f8e-f9fffb992643",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df = spark.sql(f\"SELECT * FROM {eol_view}\")\n",
-    "print(df.columns)\n"
    ]
   },
   {
@@ -423,58 +326,6 @@
    },
    "notebookName": "Create_Dataset",
    "widgets": {
-    "app_catalog_name": {
-     "currentValue": "mlops_demo",
-     "nuid": "d8b50953-f6be-4b47-b907-e69ec9781f6d",
-     "typedWidgetInfo": {
-      "autoCreated": false,
-      "defaultValue": "",
-      "label": "app_catalog_name",
-      "name": "app_catalog_name",
-      "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
-      },
-      "parameterDataType": "String"
-     },
-     "widgetInfo": {
-      "widgetType": "text",
-      "defaultValue": "",
-      "label": "app_catalog_name",
-      "name": "app_catalog_name",
-      "options": {
-       "widgetType": "text",
-       "autoCreated": null,
-       "validationRegex": null
-      }
-     }
-    },
-    "app_schema_name": {
-     "currentValue": "app",
-     "nuid": "653f8858-aae0-49bd-b2b7-3e921ecefe79",
-     "typedWidgetInfo": {
-      "autoCreated": false,
-      "defaultValue": "",
-      "label": "app_schema_name",
-      "name": "app_schema_name",
-      "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
-      },
-      "parameterDataType": "String"
-     },
-     "widgetInfo": {
-      "widgetType": "text",
-      "defaultValue": "",
-      "label": "app_schema_name",
-      "name": "app_schema_name",
-      "options": {
-       "widgetType": "text",
-       "autoCreated": null,
-       "validationRegex": null
-      }
-     }
-    },
     "eol_view": {
      "currentValue": "mlops_demo.credit_card_fraud_demo.card_present",
      "nuid": "e3febec0-9843-451b-9cf2-90acbcdd562d",
@@ -501,14 +352,14 @@
       }
      }
     },
-    "feature_lookup_id": {
-     "currentValue": "16",
-     "nuid": "79e43cd6-12c4-4b75-8b4d-a4b29b036cab",
+    "features": {
+     "currentValue": "",
+     "nuid": "f17deb1b-14b3-4e8b-b6e2-fd2a0747e188",
      "typedWidgetInfo": {
       "autoCreated": false,
       "defaultValue": "",
-      "label": "feature_lookup_id",
-      "name": "feature_lookup_id",
+      "label": "features",
+      "name": "features",
       "options": {
        "widgetDisplayType": "Text",
        "validationRegex": null
@@ -518,11 +369,11 @@
      "widgetInfo": {
       "widgetType": "text",
       "defaultValue": "",
-      "label": "feature_lookup_id",
-      "name": "feature_lookup_id",
+      "label": "features",
+      "name": "features",
       "options": {
        "widgetType": "text",
-       "autoCreated": null,
+       "autoCreated": false,
        "validationRegex": null
       }
      }
@@ -548,7 +399,7 @@
       "name": "label",
       "options": {
        "widgetType": "text",
-       "autoCreated": false,
+       "autoCreated": null,
        "validationRegex": null
       }
      }
