--- a/feature_tables/Create_Dataset.ipynb
+++ b/feature_tables/Create_Dataset.ipynb
@@ -218,6 +218,24 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ab37621b-9d4b-4c42-b91a-b7b1c618d4fe",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df = spark.sql(f\"SELECT * FROM {eol_view}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
       "rowLimit": 10000
@@ -373,7 +391,7 @@
       "name": "features",
       "options": {
        "widgetType": "text",
-       "autoCreated": false,
+       "autoCreated": null,
        "validationRegex": null
       }
      }
@@ -400,6 +418,32 @@
       "options": {
        "widgetType": "text",
        "autoCreated": null,
+       "validationRegex": null
+      }
+     }
+    },
+    "name": {
+     "currentValue": "",
+     "nuid": "cbd8689e-2c3c-415b-a83c-17b905d6697f",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "",
+      "label": "name",
+      "name": "name",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": "name",
+      "name": "name",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
        "validationRegex": null
       }
      }
