--- a/feature_tables/Create_Dataset.ipynb
+++ b/feature_tables/Create_Dataset.ipynb
@@ -132,7 +132,7 @@
     "\n",
     "\n",
     "# Generate FeatureLookup objects\n",
-    "feature_lookup_objects = []\n",
+    "feature_lookups = []\n",
     "\n",
     "for feat in features:\n",
     "    if isinstance(feat, str):\n",
@@ -178,7 +178,7 @@
     "            lookup_key=lookup_key\n",
     "        )\n",
     "    \n",
-    "    feature_lookup_objects.append(feature_lookup_obj)"
+    "    feature_lookups.append(feature_lookup_obj)"
    ]
   },
   {
