fix exclude columns

--- a/feature_tables/Create_Dataset.ipynb
+++ b/feature_tables/Create_Dataset.ipynb
@@ -236,6 +236,25 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a4f2fbb0-ba9e-4c4d-a442-dec54c71fe61",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "exclude_columns = [col for col in df.columns if col != label]\n",
+    "print(exclude_columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
       "rowLimit": 10000
@@ -253,7 +272,7 @@
     "  df=df,\n",
     "  feature_lookups=feature_lookups,\n",
     "  label=label,\n",
-    "  exclude_colunmns = df.columns\n",
+    "  exclude_colunmns = exclude_columns\n",
     ")\n",
     "\n",
     "training_df = training_set.load_df()"
