--- a/feature_tables/Create_Dataset.ipynb
+++ b/feature_tables/Create_Dataset.ipynb
@@ -272,7 +272,7 @@
     "  df=df,\n",
     "  feature_lookups=feature_lookups,\n",
     "  label=label,\n",
-    "  exclude_colunmns = exclude_columns\n",
+    "  exclude_columns = exclude_columns\n",
     ")\n",
     "\n",
     "training_df = training_set.load_df()"
