--- a/deployment_job/evaluation_classic.ipynb
+++ b/deployment_job/evaluation_classic.ipynb
@@ -53,7 +53,8 @@
     "dbutils.widgets.text(\"model_name\", \"\")\n",
     "dbutils.widgets.text(\"model_version\", \"\")\n",
     "dbutils.widgets.text(\"eval_data\", \"\")\n",
-    "dbutils.widgets.text('target',\"\")"
+    "dbutils.widgets.text('target',\"\")\n",
+    "dbutils.widgets.text('type',\"\")"
    ]
   },
   {
@@ -73,12 +74,7 @@
    "source": [
     "import pandas as pd\n",
     "from sklearn.datasets import load_iris\n",
-    "\n",
-    "def sample_iris_data():\n",
-    "  iris = load_iris()\n",
-    "  iris_df = pd.DataFrame(data=iris.data, columns=iris.feature_names)\n",
-    "  iris_df['quality'] = (iris.target == 2).astype(int)\n",
-    "  return iris_df"
+    "\n"
    ]
   },
   {
@@ -98,12 +94,10 @@
    "source": [
     "import mlflow\n",
     "\n",
-    "# REQUIRED: add evaluation dataset and target here\n",
-    "data = sample_iris_data()\n",
-    "target = \"quality\"\n",
-    "# REQUIRED: add model type here (e.g. \"regressor\", \"databricks-agent\", etc.)\n",
-    "model_type = \"regressor\"\n",
-    "\n",
+    "eval_table_name = dbutils.widgets.get(\"eval_data\")\n",
+    "data = spark.table(eval_table_name).toPandas()\n",
+    "target = dbutils.widgets.get(\"target\")\n",
+    "model_type = dbutils.widgets.get(\"type\")\n",
     "model_name = dbutils.widgets.get(\"model_name\")\n",
     "model_version = dbutils.widgets.get(\"model_version\")\n",
     "model_uri = \"models:/\" + model_name + \"/\" + model_version \n",
