--- a/deployment_job/evaluation.ipynb
+++ b/deployment_job/evaluation.ipynb
@@ -123,7 +123,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 2
    },
-   "notebookName": "evaluation_classic",
+   "notebookName": "evaluation",
    "widgets": {}
   },
   "language_info": {
