--- a/deployment_job/evaluation.ipynb
+++ b/deployment_job/evaluation.ipynb
@@ -31,7 +31,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install mlflow --upgrade\n",
+    "%pip install mlflow catboost\n",
     "dbutils.library.restartPython()"
    ]
   },
