--- a/deployment_job/evaluation.ipynb
+++ b/deployment_job/evaluation.ipynb
@@ -21,7 +21,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "64128002-6afe-4fd4-ad07-3e54040584bb",
      "showTitle": false,
@@ -40,7 +43,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "2a3c6acb-32a3-4167-a2d1-8018408768ab",
      "showTitle": false,
@@ -62,7 +68,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e669aa61-f920-4f8f-80b8-e98b0e1c1d95",
      "showTitle": false,
@@ -73,8 +82,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.datasets import load_iris\n",
-    "\n"
+    "import mlflow\n",
+    "from catboost import Pool\n"
    ]
   },
   {
@@ -82,7 +91,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "8a8b1a26-43a1-456c-b540-5d32a34e330d",
      "showTitle": false,
@@ -92,17 +104,57 @@
    },
    "outputs": [],
    "source": [
-    "import mlflow\n",
-    "\n",
     "eval_table_name = dbutils.widgets.get(\"eval_data\")\n",
     "data = spark.table(eval_table_name).toPandas()\n",
+    "\n",
     "target = dbutils.widgets.get(\"target\")\n",
     "model_type = dbutils.widgets.get(\"type\")\n",
     "model_name = dbutils.widgets.get(\"model_name\")\n",
     "model_version = dbutils.widgets.get(\"model_version\")\n",
     "model_uri = \"models:/\" + model_name + \"/\" + model_version \n",
-    "# can also fetch model ID and use that for URI instead as described below\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "122ceb37-ff69-42ed-9466-eb5e922e7eac",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "data =  data.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1e0cc920-4d22-48ab-a954-24a4a563456c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "with mlflow.start_run(run_name=\"evaluation\") as run:\n",
     "  mlflow.models.evaluate(\n",
     "    model=model_uri,\n",
@@ -124,7 +176,138 @@
     "pythonIndentUnit": 2
    },
    "notebookName": "evaluation",
-   "widgets": {}
+   "widgets": {
+    "eval_data": {
+     "currentValue": "mlops_demo.credit_card_fraud_demo.l1_eval_1755863545",
+     "nuid": "cf8f51d4-2731-4c28-84d3-984334f3510c",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "",
+      "label": null,
+      "name": "eval_data",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": null,
+      "name": "eval_data",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": null,
+       "validationRegex": null
+      }
+     }
+    },
+    "model_name": {
+     "currentValue": "mlops_demo.credit_card_fraud_demo.credit_fraud_model",
+     "nuid": "e6c108e8-33fa-41b5-b30c-871d0e6963d9",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "",
+      "label": null,
+      "name": "model_name",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": null,
+      "name": "model_name",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": null,
+       "validationRegex": null
+      }
+     }
+    },
+    "model_version": {
+     "currentValue": "2",
+     "nuid": "94799317-f077-45bb-b249-6a2e2795de4c",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "",
+      "label": null,
+      "name": "model_version",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": null,
+      "name": "model_version",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": null,
+       "validationRegex": null
+      }
+     }
+    },
+    "target": {
+     "currentValue": "label",
+     "nuid": "65a8258e-d704-4fce-a085-6dd6c0dd9c93",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "",
+      "label": null,
+      "name": "target",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": null,
+      "name": "target",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": null,
+       "validationRegex": null
+      }
+     }
+    },
+    "type": {
+     "currentValue": "classifier",
+     "nuid": "133f32a2-26d5-4c7a-a5e5-df80d49cda52",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "",
+      "label": null,
+      "name": "type",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": null,
+      "name": "type",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": null,
+       "validationRegex": null
+      }
+     }
+    }
+   }
   },
   "language_info": {
    "name": "python"
